--- a/modules/smart-agent_elasticsearch/conf/01-cluster-status.yaml
+++ b/modules/smart-agent_elasticsearch/conf/01-cluster-status.yaml
@@ -11,8 +11,10 @@ rules:
     comparator: ">="
     description: "is red"
     lasting_duration: '5m'
+    lasting_at_least: 0.5
   major:
     threshold: 1
     comparator: ">="
     description: "is yellow"
     lasting_duration: '5m'
+    lasting_at_least: 0.5
