--- a/modules/smart-agent_elasticsearch/conf/09-cluster_JVM_memory_young_usage.yaml
+++ b/modules/smart-agent_elasticsearch/conf/09-cluster_JVM_memory_young_usage.yaml
@@ -6,9 +6,11 @@ signals:
     A:
       metric: "elasticsearch.jvm.mem.pools.young.used_in_bytes"
       rollup: average
+      extrapolation: zero
     B:
       metric: "elasticsearch.jvm.mem.pools.young.max_in_bytes"
       rollup: average
+      extrapolation: last_value
     signal:
       formula: "(A/B).fill(0).scale(100)"
 rules:
@@ -16,10 +18,10 @@ rules:
     threshold: 90
     comparator: ">="
     description: "is too high"
-    lasting_duration: '10m'    
+    lasting_duration: '10m'
   minor:
     threshold: 80
     comparator: ">"
-    description: "is too high"    
+    description: "is too high"
     dependency: major
     lasting_duration: '10m'
