Disable total flow count detector - replaced by tunnel status

--- a/modules/fame_azure-vpn/conf/00-heartbeat.yaml
+++ b/modules/fame_azure-vpn/conf/00-heartbeat.yaml
@@ -6,7 +6,7 @@ aggregation: true
 
 signals:
   signal:
-    metric: fame.azure.virtual_network_gateway.total_flow_count
+    metric: fame.azure.virtual_network_gateway.tunnel_status
 
 rules:
   critical:
