--- a/modules/integration_aws-ecs-service/conf/02-memory.yaml
+++ b/modules/integration_aws-ecs-service/conf/02-memory.yaml
@@ -1,8 +1,8 @@
 module: AWS ECS Service
 name: "Memory utilization"
 
-transformation: ".min(over='5m')"
-aggregation: ".mean(by=['ServiceName'])"
+transformation: true
+aggregation: true
 
 filtering: "filter('namespace', 'AWS/ECS')"
 value_unit: "%"
@@ -15,8 +15,10 @@ signals:
 rules:
   critical:
     threshold: 90
+    lasting_duration: 30m
     comparator: ">"
   major:
     threshold: 85
     comparator: ">"
+    lasting_duration: 5m
     dependency: critical
