--- a/modules/integration_azure-mysql/conf/00-heartbeat.yaml
+++ b/modules/integration_azure-mysql/conf/00-heartbeat.yaml
@@ -4,7 +4,7 @@ name: heartbeat
 transformation: true
 aggregation: ".mean(by=['azure_resource_id'])"
 
-filtering: "filter('resource_type', 'Microsoft.DBforMySQL/servers') and filter('primary_aggregation_type', 'true')"
+filtering: "filter('resource_type', 'Microsoft.DB*orMySQL/servers') and filter('primary_aggregation_type', 'true')"
 
 signals:
   signal:
