--- a/modules/integration_azure-mysql/conf/02-free-storage.yaml
+++ b/modules/integration_azure-mysql/conf/02-free-storage.yaml
@@ -5,7 +5,7 @@ name: "Storage usage"
 transformation: true
 aggregation: ".mean(by=['azure_resource_name', 'azure_resource_group_name', 'azure_region'])"
 
-filtering: "filter('resource_type', 'Microsoft.DBforMySQL/servers') and filter('primary_aggregation_type', 'true')"
+filtering: "filter('resource_type', 'Microsoft.DB*orMySQL/servers') and filter('primary_aggregation_type', 'true')"
 value_unit: "%"
 
 signals:
