smart-agent_system-common-Ignore-loop-devices

--- a/modules/smart-agent_system-common/conf/04-inodes.yaml
+++ b/modules/smart-agent_system-common/conf/04-inodes.yaml
@@ -5,6 +5,7 @@ value_unit: "%"
 signals:
   signal:
     metric: percent_inodes.used
+    filter: not filter('device', '/dev/loop*')
 rules:
   critical:
     threshold: 95
