add database capacity usage detector - fix

--- a/modules/integration_aws-elasticache-redis/conf/06-database-capacity-usage.yaml
+++ b/modules/integration_aws-elasticache-redis/conf/06-database-capacity-usage.yaml
@@ -10,8 +10,8 @@ signals:
     metric: DatabaseCapacityUsagePercentage
 
 rules:
-  critical: 90
-    threshold: 
+  critical:
+    threshold: 90 
     comparator: ">"
     lasting_duration: 10m
   major:
