--- a/modules/integration_azure-firewall/conf/01-snat.yaml
+++ b/modules/integration_azure-firewall/conf/01-snat.yaml
@@ -3,7 +3,7 @@ module: Azure firewall
 name: "SNAT Port Utilization"
 
 transformation: true
-aggregation: ".mean(by=['protocol'])"
+aggregation: ".mean(by=['protocol', 'azure_resource_name'])"
 
 filtering: "filter('resource_type', 'Microsoft.Network/azureFirewalls') and filter('primary_aggregation_type', 'true')"
 
