redis.client.blocked → redis.clients.blocked
https://github.com/open-telemetry/opentelemetry-collector-contrib/blob/main/receiver/redisreceiver/metadata.yaml#L153
https://github.com/open-telemetry/opentelemetry-collector-contrib/blob/main/receiver/redisreceiver/metadata.yaml#L130

--- a/modules/smart-agent_redis/conf/03-blocked-clients.yaml
+++ b/modules/smart-agent_redis/conf/03-blocked-clients.yaml
@@ -5,9 +5,9 @@ value_unit: "%"
 
 signals:
   A:
-    metric: '${var.use_otel_receiver ? "redis.client.blocked" : "gauge.blocked_clients"}'
+    metric: '${var.use_otel_receiver ? "redis.clients.blocked" : "gauge.blocked_clients"}'
   B:
-    metric: '${var.use_otel_receiver ? "redis.client.connected" : "gauge.connected_clients"}'
+    metric: '${var.use_otel_receiver ? "redis.clients.connected" : "gauge.connected_clients"}'
   signal:
     formula: (A/B).scale(100)
 
