--- a/modules/integration_gcp-cloud-run/conf/readme.yaml
+++ b/modules/integration_gcp-cloud-run/conf/readme.yaml
@@ -16,7 +16,7 @@ notes: |
 
   via gcloud, at the Cloud Run level:
   ```
-  gcloud run deploy hello \                                                                                                                                                                                              INT ✘  claranet G  15:34:40  
+  gcloud run deploy hello \
   --image=us-docker.pkg.dev/cloudrun/container/hello \
   --allow-unauthenticated \
   --port=8080 \
