--- a/modules/integration_gcp-cloud-run/conf/01-cpu_utilizations.yaml
+++ b/modules/integration_gcp-cloud-run/conf/01-cpu_utilizations.yaml
@@ -1,12 +1,12 @@
 module: "GCP Cloud Run"
-name: "Memory usage"
+name: "CPU utilizations"
 
 value_unit: "%"
 transformation: ".min(over='30m')"
 
 signals:
   signal:
-    metric: "container/memory/utilizations"
+    metric: "container/cpu/utilizations"
 
 signals:
   A:
@@ -17,10 +17,10 @@ signals:
 
 rules:
   critical:
-    threshold: 95
+    threshold: 90
     comparator: ">"
 
   major:
-    threshold: 90
+    threshold: 85
     comparator: ">"
     dependency: "critical"
