update conf detectors cloud run

--- a/modules/integration_gcp-cloud-run/conf/03-connection_refused_count.yaml
+++ b/modules/integration_gcp-cloud-run/conf/03-connection_refused_count.yaml
@@ -1,11 +1,14 @@
 module: GCP Cloud Run
-name: connection refused to sql ratio
+name: CloudSQL connections refused to requests ratio
 
+transformation: true
+aggregation: ".count(by=['response_code_class'])"
 value_unit: "%"
 
 signals:
   A:
     metric: "infrastructure/cloudsql/connection_refused_count"
+    filter: "filter('response_code_class', '5xx')"
   B:
     metric: "infrastructure/cloudsql/connection_request_count"
   signal:
