--- a/modules/integration_aws-direct-connect/conf/02-connection_traffic.yaml
+++ b/modules/integration_aws-direct-connect/conf/02-connection_traffic.yaml
@@ -4,7 +4,7 @@ name: "Connection traffic"
 transformation: true
 aggregation: true
 
-filtering: "filter('namespace', 'AWS/DirectConnect')"
+filtering: "filter('namespace', 'AWS/DX')"
 value_unit: "bytes"
 
 signals:
