fix: connection state

--- a/modules/integration_aws-direct-connect/conf/01-connection_state.yaml
+++ b/modules/integration_aws-direct-connect/conf/01-connection_state.yaml
@@ -10,7 +10,7 @@ value_unit: "state"
 signals:
   signal:
     metric: ConnectionState
-    filter: "filter('stat', 'maximum')"
+    filter: "filter('stat', 'sum')"
 
 rules:
   critical:
