--- a/modules/integration_aws-direct-connect/conf/02-connection_traffic.yaml
+++ b/modules/integration_aws-direct-connect/conf/02-connection_traffic.yaml
@@ -4,7 +4,7 @@ name: "Virtual Interface traffic"
 transformation: true
 aggregation: true
 
-filtering: "filter('namespace', 'AWS/DX')"
+filtering: "filter('namespace', 'AWS/DX') and filter('ConnectionId', '${var.connection_id}') and filter('VirtualInterfaceId', '${var.virtual_interface_id}')"
 value_unit: "bytes"
 
 signals:
