fix: heatbeat detector

--- a/modules/integration_aws-direct-connect/conf/00-heartbeat.yaml
+++ b/modules/integration_aws-direct-connect/conf/00-heartbeat.yaml
@@ -1,10 +1,5 @@
-## Example
-module: aws-direct-connect
+module: AWS Direct Connect
 name: heartbeat
-
-transformation: false
-aggregation: true
-exclude_not_running_vm: true
 
 signals:
   signal:
