Disable Azure Key Vault API latency detector by default

--- a/modules/integration_azure-key-vault/conf/02-api-latency.yaml
+++ b/modules/integration_azure-key-vault/conf/02-api-latency.yaml
@@ -15,9 +15,11 @@ rules:
     threshold: 500
     comparator: ">"
     lasting_duration: '1h'
+    disabled: true
   minor:
     threshold: 500
     comparator: ">"
     lasting_duration: '30m'
     dependency: major
+    disabled: true
 ...
