--- a/modules/integration_azure-sql-managed-instances/conf/02-storage-usage.yaml
+++ b/modules/integration_azure-sql-managed-instances/conf/02-storage-usage.yaml
@@ -3,19 +3,15 @@ module: "Azure SQL Managed Instances"
 name: "storage usage"
 filtering: "filter('resource_type', 'Microsoft.Sql/managedInstances') and filter('primary_aggregation_type', 'true')"
 aggregation: ".mean(by=['azure_resource_name', 'azure_resource_group_name', 'azure_region'])"
-value_unit: "%"
+value_unit: "Megabyte"
 transformation: true
 signals:
   signal:
     metric: "storage_space_used_mb"
 rules:
   critical:
-    threshold: 90
     comparator: ">"
-    lasting_duration: '15m'
   major:
-    threshold: 80
     comparator: ">"
-    lasting_duration: '15m'
     dependency: critical
 ...
