--- a/modules/integration_gcp-firebase/conf/01-database_load.yaml
+++ b/modules/integration_gcp-firebase/conf/01-database_load.yaml
@@ -1,7 +1,7 @@
 module: "GCP Firebase database"
-name: "Firebase database load"
+name: "Load"
 
-transformation: ".min(over='30m')"
+transformation: true
 
 signals:
   signal:
@@ -11,8 +11,10 @@ rules:
   critical:
     threshold: 10
     comparator: ">"
+    lasting_duration: '30m'
 
   major:
     threshold: 5
     comparator: ">"
+    lasting_duration: '30m'
     dependency: "critical"
