--- a/modules/integration_gcp-firebase/conf/01-database_load.yaml
+++ b/modules/integration_gcp-firebase/conf/01-database_load.yaml
@@ -12,6 +12,7 @@ rules:
     threshold: 10
     comparator: ">"
     lasting_duration: '30m'
+    lasting_duration: '30m'
 
   major:
     threshold: 5
