--- a/modules/integration_gcp-firebase/conf/02-io_utilization.yaml
+++ b/modules/integration_gcp-firebase/conf/02-io_utilization.yaml
@@ -18,4 +18,5 @@ rules:
     threshold: 5
     comparator: ">"
     lasting_duration: '30m'
+    lasting_duration: '30m'
     dependency: "critical"
