--- a/modules/integration_aws-efs/conf/06-burst-cedit-balance.yaml
+++ b/modules/integration_aws-efs/conf/06-burst-cedit-balance.yaml
@@ -2,7 +2,6 @@ module: "AWS EFS"
 name: "Burst Credit Balance"
 filtering: "filter('namespace', 'AWS/EFS')"
 value_unit: "credits"
-transformation: ".mean(over='5m')"
 tip: "See https://docs.aws.amazon.com/efs/latest/ug/performance.html#bursting"
 signals:
   signal:
@@ -12,3 +11,4 @@ rules:
   major:
     comparator: "<"
     threshold: 1
+    lasting_duration: "5m"
