--- a/modules/integration_aws-efs/conf/02-io-limit.yaml
+++ b/modules/integration_aws-efs/conf/02-io-limit.yaml
@@ -3,7 +3,6 @@ name: "Percent of IO Limit"
 id: "io_limit"
 filtering: "filter('namespace', 'AWS/EFS')"
 value_unit: "%"
-transformation: ".mean(over='30m')"
 tip: "If you reach too often the limit with current General Purpose mode, consider moving your application to a file system using the Max I/O performance mode."
 signals:
   signal:
@@ -13,7 +12,9 @@ rules:
   major:
     comparator: ">"
     threshold: 90
+    lasting_duration: "30m"
   minor:
     comparator: ">"
     dependency: major
     threshold: 80
+    lasting_duration: "30m"
