feat: integration_aws-efs: optionalize detectors

--- a/modules/integration_aws-efs/conf/01-used-space.yaml
+++ b/modules/integration_aws-efs/conf/01-used-space.yaml
@@ -2,6 +2,7 @@ module: "AWS EFS"
 name: "Used Space"
 filtering: "filter('namespace', 'AWS/EFS')"
 value_unit: "Gibibyte"
+condition: "var.used_space_detector_enabled"
 signals:
   used_space:
     metric: "StorageBytes"
