--- a/modules/integration_aws-efs/conf/03-throughput-read.yaml
+++ b/modules/integration_aws-efs/conf/03-throughput-read.yaml
@@ -3,6 +3,7 @@ name: "Percent of read throughput"
 id: "read_throughput"
 filtering: "filter('namespace', 'AWS/EFS')"
 value_unit: "%"
+condition: "var.read_throughput_detector_enabled"
 disabled: true
 signals:
   read:
