--- a/modules/integration_aws-efs/conf/04-throughput-write.yaml
+++ b/modules/integration_aws-efs/conf/04-throughput-write.yaml
@@ -3,6 +3,7 @@ name: "Percent of write throughput"
 id: "write_throughput"
 filtering: "filter('namespace', 'AWS/EFS')"
 value_unit: "%"
+condition: "var.write_throughput_detector_enabled"
 disabled: true
 signals:
   write:
