--- a/modules/integration_aws-efs/conf/06-burst-cedit-balance.yaml
+++ b/modules/integration_aws-efs/conf/06-burst-cedit-balance.yaml
@@ -2,6 +2,7 @@ module: "AWS EFS"
 name: "Burst Credit Balance"
 filtering: "filter('namespace', 'AWS/EFS')"
 value_unit: "credits"
+condition: "var.burst_credit_balance_detector_enabled"
 tip: "See https://docs.aws.amazon.com/efs/latest/ug/performance.html#bursting"
 signals:
   signal:
