fix: integration_aws-efs: move all alarms to critical/major channels

--- a/modules/integration_aws-efs/conf/02-io-limit.yaml
+++ b/modules/integration_aws-efs/conf/02-io-limit.yaml
@@ -10,12 +10,12 @@ signals:
     metric: "PercentIOLimit"
     filter: "filter('stat', 'mean')"
 rules:
-  major:
+  critical:
     comparator: ">"
     threshold: 90
     lasting_duration: "30m"
-  minor:
+  major:
     comparator: ">"
-    dependency: major
+    dependency: critical
     threshold: 80
     lasting_duration: "30m"
