--- a/modules/integration_aws-efs/conf/04-throughput-write.yaml
+++ b/modules/integration_aws-efs/conf/04-throughput-write.yaml
@@ -16,10 +16,10 @@ signals:
     formula:
       (write/total).scale(100)
 rules:
-  minor:
+  critical:
     comparator: ">"
     lasting_duration: "15m"
-  warning:
+  major:
     comparator: ">"
-    dependency: minor
+    dependency: critical
     lasting_duration: "15m"
