feat: integration_aws-efs: set read/write throughput default thresholds

--- a/modules/integration_aws-efs/conf/03-throughput-read.yaml
+++ b/modules/integration_aws-efs/conf/03-throughput-read.yaml
@@ -17,8 +17,10 @@ signals:
 rules:
   critical:
     comparator: ">"
+    threshold: 90
     lasting_duration: "15m"
   major:
     lasting_duration: "15m"
     comparator: ">"
+    threshold: 80
     dependency: critical
