feat: integration_aws-rds-common: optionalize detectors

--- a/modules/integration_aws-rds-common/conf/00-heartbeat.yaml
+++ b/modules/integration_aws-rds-common/conf/00-heartbeat.yaml
@@ -4,6 +4,7 @@ name: heartbeat
 transformation: false
 aggregation: ".mean(by=['DBInstanceIdentifier'])"
 filtering: "filter('namespace', 'AWS/RDS')"
+condition: "var.heartbeat_detector_enabled"
 
 signals:
   signal:
