--- a/modules/integration_aws-rds-common/conf/01-cpu.yaml
+++ b/modules/integration_aws-rds-common/conf/01-cpu.yaml
@@ -7,6 +7,7 @@ aggregation: ".min(over='15m')"
 
 filtering: "filter('namespace', 'AWS/RDS')"
 value_unit: "%"
+condition: "var.cpu_usage_detector_enabled"
 
 signals:
   signal:
