--- a/modules/integration_aws-rds-common/conf/03-replica-lag.yaml
+++ b/modules/integration_aws-rds-common/conf/03-replica-lag.yaml
@@ -5,6 +5,7 @@ transformation: true
 aggregation: ".min(over='5m')"
 
 filtering: "filter('namespace', 'AWS/RDS')"
+condition: "var.replica_lag_detector_enabled"
 
 signals:
   signal:
