--- a/modules/integration_aws-rds-common/conf/02-free-space.yaml
+++ b/modules/integration_aws-rds-common/conf/02-free-space.yaml
@@ -7,6 +7,7 @@ aggregation: ".min(over='15m')"
 
 filtering: "filter('namespace', 'AWS/RDS')"
 value_unit: "Gibibyte"
+condition: "var.free_space_detector_enabled"
 
 signals:
   signal:
