--- a/modules/integration_aws-rds-common/conf/04-dbload.yaml
+++ b/modules/integration_aws-rds-common/conf/04-dbload.yaml
@@ -5,6 +5,7 @@ name: "DB Load"
 transformation: true
 aggregation: true
 filtering: "filter('namespace', 'AWS/RDS') and filter('stat', 'mean')"
+condition: "var.dbload_detector_enabled"
 
 signals:
   signal:
