--- a/modules/integration_aws-rds-common/conf/03-replica-lag.yaml
+++ b/modules/integration_aws-rds-common/conf/03-replica-lag.yaml
@@ -1,9 +1,6 @@
 module: AWS RDS Common
 name: "Replica lag"
 
-transformation: true
-aggregation: ".min(over='5m')"
-
 filtering: "filter('namespace', 'AWS/RDS')"
 condition: "var.replica_lag_detector_enabled"
 
@@ -16,7 +13,9 @@ rules:
   critical:
     threshold: 300
     comparator: ">"
+    duration: "5m"
   major:
     threshold: 200
     comparator: ">"
+    duration: "5m"
     dependency: critical
