--- a/modules/integration_aws-alb/conf/02-lb-5xx.yaml
+++ b/modules/integration_aws-alb/conf/02-lb-5xx.yaml
@@ -6,6 +6,7 @@ transformation: true
 aggregation: true
 filtering: "filter('namespace', 'AWS/ApplicationELB') and filter('stat', 'sum') and (not filter('AvailabilityZone', '*'))"
 value_unit: "%"
+condition: "var.lb_5xx_detector_enabled"
 
 signals:
   errors:
