--- a/modules/integration_aws-alb/conf/06-healthy.yaml
+++ b/modules/integration_aws-alb/conf/06-healthy.yaml
@@ -6,6 +6,7 @@ transformation: true
 aggregation: true
 filtering: "filter('namespace', 'AWS/ApplicationELB') and (not filter('AvailabilityZone', '*'))"
 value_unit: "%"
+condition: "var.healthy_detector_enabled"
 
 signals:
   healthy:
