fix(memcached): hit ratio signal formula

--- a/modules/integration_aws-elasticache-memcached/conf/02-hit-ratio.yaml
+++ b/modules/integration_aws-elasticache-memcached/conf/02-hit-ratio.yaml
@@ -16,7 +16,7 @@ signals:
     extrapolation: zero
     rollup: sum
   signal:
-    formula: (hits/(hits+misses)).scale(100).fill(value=0)
+    formula: (hits/(hits+misses)).fill(value=1).scale(100)
 rules:
   major:
     threshold: 60
